updated with calculator e2e testing

--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,24 +1,23 @@
 <div class="content-wrapper">
 
-  <div *ngIf="allColorsSelected()">
-    <h3>Resistance:</h3>
-    {{ resistance }}
+  <div id='resistance'>
+    <h3>Resistance: {{ resistance }}</h3>
   </div>
 
-  <div *ngIf="!allColorsSelected()">{{ message }}</div>
+  <div id='message'>{{ message }}</div>
 
   <div class="dropdown-group">
     <!-- Digits -->
     <h5>Digits:</h5>
-    <select [(ngModel)]='selectedColors[0]' (ngModelChange)="updateSelectedColors()">
+    <select id='dropdown' [(ngModel)]='selectedColors[0]' (ngModelChange)="updateSelectedColors()">
       <option value="">Select color</option>
       <option *ngFor="let color of digitColorCode" [value]="color">{{ color }}</option>
     </select>
-    <select [(ngModel)]='selectedColors[1]' (ngModelChange)="updateSelectedColors()">
+    <select id='dropdown' [(ngModel)]='selectedColors[1]' (ngModelChange)="updateSelectedColors()">
       <option value="">Select color</option>
       <option *ngFor="let color of digitColorCode" [value]="color">{{ color }}</option>
     </select>
-    <select [(ngModel)]='selectedColors[2]' (ngModelChange)="updateSelectedColors()">
+    <select id='dropdown' [(ngModel)]='selectedColors[2]' (ngModelChange)="updateSelectedColors()">
       <option value="">Select color</option>
       <option *ngFor="let color of digitColorCode" [value]="color">{{ color }}</option>
     </select>
@@ -27,7 +26,7 @@
   <div class="dropdown-group">
     <!-- Multiplier -->
     <h5>Multiplier:</h5>
-    <select [(ngModel)]='selectedColors[3]' (ngModelChange)="updateSelectedColors()">
+    <select id='dropdown' [(ngModel)]='selectedColors[3]' (ngModelChange)="updateSelectedColors()">
       <option value="">Select color</option>
       <option *ngFor="let color of multiplierColorCode" [value]="color">{{ color }}</option>
     </select>
@@ -36,7 +35,7 @@
   <div class="dropdown-group">
     <!-- Tolerance -->
     <h5>Tolerance:</h5>
-    <select [(ngModel)]='selectedColors[4]' (ngModelChange)="updateSelectedColors()">
+    <select id='dropdown' [(ngModel)]='selectedColors[4]' (ngModelChange)="updateSelectedColors()">
       <option value="">Select color</option>
      <option *ngFor="let color of toleranceColorCode" [value]="color">{{ color }}</option>
     </select>
